# footballpace-next

./: .gitignore  AGENTS.md  README.md  dagster_cloud.yaml  package.json  pnpm-lock.yaml
app/: layout.tsx  page.tsx
components/: standings-table-placeholder.tsx  standings-table.tsx  (+2 more)
data/: .env.sample  .gitignore  README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt  setup.py
data/docker/: Dockerfile_dagster  Dockerfile_footballpace_data  README.md  dagster.yaml  docker-compose.yml  update.sh  workspace.yaml
data/footballpace/: __init__.py  assets.py  canonical.py  dataversion.py  definitions.py  jobs.py  partitions.py  resources.py  schedules.py  sensors.py
data/footballpace/assets/: __init__.py  cache_update.py  colors.py  fpl_fixtures.py  match_results.py  match_with_finish.py  pace_sheet.py  partition.py  standings_rows.py  team_colors.py  theassets.py
data/footballpace/defs/: README.md  schedules.py
data/footballpace/defs/assets/: cache_update.py  match_results.py  pace_sheet.py
data/footballpace/defs/resources/: http.py
data/footballpace/resources/: footballdata.py  http.py  vercel.py
data/footballpace/tests/: test_defs.py  test_schedules.py
data/footballpace/tests/assets/: read_csv_bytes.py  read_file.py  test_assets_fpl_fixtures.py  test_assets_match_results.py  test_assets_match_with_finish.py  test_assets_pace_sheet.py  test_assets_standings_rows.py  test_assets_team_colors.py
data/footballpace_tests/: test_assets.py  test_defs.py  test_resources.py
data/footballpace_tests/assets/: test_assets_match_results.py  test_assets_standings_rows.py
data/src/footballpace/: dataversion.py  definitions.py  markdown.py  partitions.py  row_count.py
data/src/footballpace/defs/: models.py  schedules.py  sensors.py
data/src/footballpace/defs/asset_checks/: fpl_fixtures_checks.py  helpers.py  match_results_checks.py  match_with_finish_checks.py  pace_sheet_checks.py  standings_rows_checks.py  team_colors_checks.py
data/src/footballpace/defs/assets/: cache_update.py  fpl_fixtures.py  match_results.py  match_with_finish.py  pace_sheet.py  standings_rows.py  team_colors.py
data/src/footballpace/defs/resources/: cache_update.py  footballdata.py  http.py  resources.py  vercel.py
data/tests/: test_partitions.py  test_resources.py  test_schedules.py
data/tests/assets/: test_asset_checks.py  test_assets_cache_update.py  test_assets_fpl_fixtures.py  test_assets_match_results.py  test_assets_match_with_finish.py  test_assets_pace_sheet.py  test_assets_standings_rows.py  test_assets_team_colors.py
data/tests/assets/fpl/: bootstrap-static.json  fixtures-rescheduled.json  fixtures.json
data/tests/assets/teamcolors/: teams.json
(+181 files in other folders)
