[project]
name = "footballpace"
version = "0.0.1"
requires-python = ">= 3.12"
dependencies = [
  "dagster>=1.11.3",
  "dagster-cloud>=1.11.3",
  "dagster-pandas>=0.27.3",
  "dagster-webserver>=1.11.3",
  "httpx>=0.28.1",
  "pandas>=2.3.0",
  "psycopg[binary]>=3.2.9",
]

[project.optional-dependencies]
docker = [
    "dagster-docker>=0.27.3",
    "dagster-postgres>=0.27.3",
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.11.3",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.dagster]
code_location_name = "footballpace"
module_name = "footballpace.definitions"

[tool.dg]
directory_type = "project"

[tool.dg.project]
code_location_target_module = "footballpace.definitions"
root_module = "footballpace"
