[project]
name = "footballpace"
version = "0.0.1"
requires-python = ">= 3.12"
dependencies = [
  "dagster>=1.12.22",
  "dagster-cloud>=1.12.22",
  "dagster-polars[patito]>=0.27.9",
  "dagster-webserver>=1.12.22",
  "httpx>=0.28.1",
  "patito>=0.8.6",
  "polars>=1.38.0,<1.39.0", # https://github.com/pola-rs/polars/issues/27060
  "psycopg[binary]>=3.3.3",
]

[project.optional-dependencies]
docker = [
    "dagster-docker>=0.27.9",
    "dagster-postgres>=0.27.9",
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.12.22",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.dagster]
code_location_name = "footballpace"
module_name = "footballpace.definitions"

[tool.dg]
directory_type = "project"

[tool.dg.project]
code_location_target_module = "footballpace.definitions"
root_module = "footballpace"
