[project]
name = "footballpace"
version = "0.0.1"
requires-python = ">= 3.14"
dependencies = [
  "dagster>=1.13.3",
  "dagster-cloud>=1.13.3",
  "dagster-polars[patito]>=0.27.9",
  "dagster-webserver>=1.13.3",
  "httpx>=0.28.1",
  "patito>=0.8.6",
  "polars>=1.40.1",
  "psycopg[binary]>=3.3.4",
]

[project.optional-dependencies]
docker = [
    "dagster-docker>=0.29.3",
    "dagster-postgres>=0.29.3",
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.13.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.dagster]
code_location_name = "footballpace"
module_name = "footballpace.definitions"

[tool.dg]
directory_type = "project"

[tool.dg.project]
code_location_target_module = "footballpace.definitions"
root_module = "footballpace"
